	* Initial XER (XML) decoding implementation.
	* -X command line option added to asn1c to generate XML DTD.
	* Empty SEQUENCE and SET clauses are now allowed.
	* Removed confusion between &xNN; and &#xNN; in enber and unber.
	* ber_dec_rval_t renamed into asn_dec_rval_t: more generality.
	* Removed order dependency in DEFAULT references to ENUMERATED
	  identifiers (./tests/68-*-OK.asn1).

0.9.7.1:	2004-Oct-12

	* Fixed automatic tagging for extensions of compound types.
	* Fixed ParametrizedReference parsing: {} are now recognized.

0.9.7:	2004-Oct-11

	* Finished CANONICAL-XER implementation by adding SET and SET OF
	  canonical ordering support.
	* Fixed unber(1) limits controlling logic.
	* Removed C99'izm from the x509dump, now understood by older compilers.
	* Enhanced UTF8String constraint validation, now it checks
	  for the minimal encoding length; API of UTF8String_length() changed.
	* Fixed SEQUENCE dealing with premature termination of the
	  optionals-laden indefinite length structure. The code was previously
	  refusing to parse such structures.
	* Fixed explicitly tagged ANY type encoding and decoding
	  (Severity: medium, Secruity impact: low).
	* Fixed CHOICE code spin when indefinite length structures appear
	  in the extensions (Severity: medium, Security impact: medium).
	  Reported by <siden@ul-gsm.ru>.
	* BIT STRING now stores the number of unused octets in a separate field.

0.9.6:	2004-Sep-29

	* Added several security firewalls: decoder's stack usage control
	  and the stricter checking of the TLV length.
	* Implemented BASIC-XER encoding support (X.693).
	* Implemented unber(1) and enber(1) for BER<->XML translation.
	* Implemented CGI for online ASN.1 compilation (asn1c/webcgi).
	* Implemented the sample X.509 decoder (./examples/sample.source.PKIX1).
	* NamedType is now supported for SET OF/SEQUENCE OF type.
	* Added -fno-constraints option to asn1c, which disabled generation of
	  ASN.1 subtype constraints checking code.